--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,18 +17,52 @@
 @import './utils/container';
 @import './utils/variables';
 
+a {
+   display: block;
+   margin-right: 100px;
+   position: relative;
+}
+
+a:nth-child(1)::before {
+   display: block;
+   content: '1';
+   width: 100%;
+   height: 15px;
+   position: absolute;
+   left: 0;
+   top: -25px;
+}
+a:nth-child(2)::before {
+   display: block;
+   content: '2';
+   width: 100%;
+   height: 15px;
+   position: absolute;
+   left: 0;
+   top: -25px;
+}
+a:nth-child(3)::before {
+   display: block;
+   content: '3';
+   width: 100%;
+   height: 15px;
+   position: absolute;
+   left: 0;
+   top: -25px;
+}
 .wrapper {
    margin: 50px;
    //    background-color: #cfcfcf;
    height: 150px;
    display: flex;
+   flex-wrap: wrap;
    justify-content: center;
    align-items: center;
 }
 .logo {
    display: inline-flex;
    position: relative;
-   transform: scale(3);
+   //    transform: scale(3);
 }
 .letters {
    width: 128px;
@@ -43,6 +77,30 @@
    transform-origin: bottom center;
    animation-name: flame;
    animation-duration: 1000ms;
+   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   animation-iteration-count: infinite;
+}
+.fire2 {
+   width: 22px;
+   height: 30px;
+   position: absolute;
+   top: 0;
+   left: 48%;
+   transform-origin: bottom center;
+   animation-name: flame2;
+   animation-duration: 700ms;
+   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   animation-iteration-count: infinite;
+}
+.fire3 {
+   width: 22px;
+   height: 30px;
+   position: absolute;
+   top: 0;
+   left: 48%;
+   transform-origin: bottom center;
+   animation-name: flame3;
+   animation-duration: 1700ms;
    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    animation-iteration-count: infinite;
 }
@@ -65,6 +123,41 @@
    100% {
       transform: rotate(0deg);
       //   transform: rotate(7deg);
+      fill: orangered;
+   }
+}
+
+@keyframes flame2 {
+   0% {
+      fill: rgb(255, 94, 0);
+      transform: rotate(0deg);
+   }
+
+   50% {
+      fill: #ff6b09;
+      transform: translateY(-8px) rotate(0deg) scale(0.95);
+   }
+
+   100% {
+      transform: rotate(0deg);
+
+      fill: orangered;
+   }
+}
+@keyframes flame3 {
+   0% {
+      fill: rgb(255, 94, 0);
+      transform: rotate(0deg);
+   }
+
+   50% {
+      fill: #ff6b09;
+      transform: rotate(15deg) scale(1.2);
+   }
+
+   100% {
+      transform: rotate(0deg);
+
       fill: orangered;
    }
 }
