--- a/css/main.css
+++ b/css/main.css
@@ -662,6 +662,16 @@ a:nth-child(3)::before {
   top: -25px;
 }
 
+a:nth-child(4)::before {
+  display: block;
+  content: '4';
+  width: 100%;
+  height: 15px;
+  position: absolute;
+  left: 0;
+  top: -25px;
+}
+
 .wrapper {
   margin: 50px;
   height: 150px;
@@ -720,6 +730,19 @@ a:nth-child(3)::before {
   animation-iteration-count: infinite;
 }
 
+.fire4 {
+  width: 22px;
+  height: 30px;
+  position: absolute;
+  top: 0;
+  left: 48%;
+  transform-origin: bottom center;
+  animation-name: flame4;
+  animation-duration: 700ms;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-iteration-count: infinite;
+}
+
 @keyframes flame {
   0% {
     fill: #ff5e00;
@@ -727,10 +750,13 @@ a:nth-child(3)::before {
   }
   50% {
     fill: #ff6b09;
-    transform: translateY(-3px) rotate(7deg) scale(0.95);
+    transform: translateY(-3px) rotate(7deg) scale(1.1);
+  }
+  75% {
+    fill: #ff8800;
   }
   100% {
-    transform: rotate(0deg);
+    transform: rotate(0deg) scale;
     fill: orangered;
   }
 }
@@ -742,11 +768,11 @@ a:nth-child(3)::before {
   }
   50% {
     fill: #ff6b09;
-    transform: translateY(-8px) rotate(0deg) scale(0.95);
+    transform: translateY(-8px) rotate(0deg) scale(1.3);
   }
   100% {
     transform: rotate(0deg);
-    fill: orangered;
+    fill: #f83605;
   }
 }
 
@@ -762,6 +788,16 @@ a:nth-child(3)::before {
   100% {
     transform: rotate(0deg);
     fill: orangered;
+  }
+}
+
+@keyframes flame4 {
+  0% {
+    fill: #ff6b09;
+  }
+  100% {
+    fill: orangered;
+    transform: rotate(15deg) scale(1.4);
   }
 }
 /*# sourceMappingURL=main.css.map */
