--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,6 +50,15 @@ a:nth-child(3)::before {
    left: 0;
    top: -25px;
 }
+a:nth-child(4)::before {
+   display: block;
+   content: '4';
+   width: 100%;
+   height: 15px;
+   position: absolute;
+   left: 0;
+   top: -25px;
+}
 .wrapper {
    margin: 50px;
    //    background-color: #cfcfcf;
@@ -104,6 +113,18 @@ a:nth-child(3)::before {
    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    animation-iteration-count: infinite;
 }
+.fire4 {
+   width: 22px;
+   height: 30px;
+   position: absolute;
+   top: 0;
+   left: 48%;
+   transform-origin: bottom center;
+   animation-name: flame4;
+   animation-duration: 700ms;
+   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   animation-iteration-count: infinite;
+}
 
 @keyframes flame {
    0% {
@@ -117,11 +138,15 @@ a:nth-child(3)::before {
    50% {
       //   transform: rotate(7deg);
       fill: #ff6b09;
-      transform: translateY(-3px) rotate(7deg) scale(0.95);
+      transform: translateY(-3px) rotate(7deg) scale(1.1);
+   }
+   75% {
+      //   transform: translateY(-10px);
+      fill: rgb(255, 136, 0);
    }
 
    100% {
-      transform: rotate(0deg);
+      transform: rotate(0deg) scale;
       //   transform: rotate(7deg);
       fill: orangered;
    }
@@ -135,13 +160,13 @@ a:nth-child(3)::before {
 
    50% {
       fill: #ff6b09;
-      transform: translateY(-8px) rotate(0deg) scale(0.95);
+      transform: translateY(-8px) rotate(0deg) scale(1.3);
    }
 
    100% {
       transform: rotate(0deg);
 
-      fill: orangered;
+      fill: rgb(248, 54, 5);
    }
 }
 @keyframes flame3 {
@@ -159,5 +184,16 @@ a:nth-child(3)::before {
       transform: rotate(0deg);
 
       fill: orangered;
+   }
+}
+
+@keyframes flame4 {
+   0% {
+      fill: #ff6b09;
+   }
+
+   100% {
+      fill: orangered;
+      transform: rotate(15deg) scale(1.4);
    }
 }
